@@ -310,7 +310,7 @@ DMDDEV void Render_16_Shades(UINT16 width, UINT16 height, UINT8 *currbuffer)
 
 DMDDEV void Render_PM_Alphanumeric_Frame(layout_t layout, const UINT16 *const seg_data, const UINT16 *const seg_data2) 
 {
-	if (memcmp(seg_data, seg_data_old, 50 * sizeof(UINT16)) == 0)
+	if (!memcmp(seg_data, seg_data_old, 50 * sizeof(UINT16)))
 		return;
 
 	memcpy(seg_data_old, seg_data, 50 * sizeof(UINT16));
@@ -370,8 +370,8 @@ DMDDEV void Render_PM_Alphanumeric_Frame(layout_t layout, const UINT16 *const se
 				break;
 		}
 
-		if (!memcmp(oldbuffer, AlphaNumericFrameBuffer, 2048)) //check if same frame again
-			return;
+		//if (!memcmp(oldbuffer, AlphaNumericFrameBuffer, 2048)) //check if same frame again
+		//	return;
 
 		memcpy(oldbuffer, AlphaNumericFrameBuffer, 2048);
 
