@@ -106,7 +106,7 @@ DMDDEV void Render_16_Shades(UINT16 width, UINT16 height, UINT8 *currbuffer)
 
 DMDDEV void Render_PM_Alphanumeric_Frame(layout_t layout, const UINT16 *const seg_data, const UINT16 *const seg_data2) 
 {
-	if (memcmp(seg_data, seg_data_old, 50 * sizeof(UINT16)) == 0)
+	if (!memcmp(seg_data, seg_data_old, 50 * sizeof(UINT16)))
 		return;
 
 	memcpy(seg_data_old, seg_data, 50 * sizeof(UINT16));
@@ -173,8 +173,8 @@ DMDDEV void Render_PM_Alphanumeric_Frame(layout_t layout, const UINT16 *const se
 			tempbuffer[(i*8)+7] = AlphaNumericFrameBuffer[i]>>7 & 0x01 | AlphaNumericFrameBuffer[i+512]>>6 & 0x02 | AlphaNumericFrameBuffer[i+1024]>>5 & 0x04 | AlphaNumericFrameBuffer[i+1536]>>4 & 0x08;
 		}
 
-		if (!memcmp(oldbuffer, tempbuffer, 128*32)) //check if same frame again
-			return;
+		//if (!memcmp(oldbuffer, tempbuffer, 128*32)) //check if same frame again
+		//	return;
 
 		memcpy(oldbuffer, tempbuffer, 128*32);
 
